# frontend

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
my-app/: next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  server.js  tailwind.config.js  tsconfig.json
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/chatbot/: page.tsx
my-app/app/disease/: page.tsx
my-app/app/hospital/: ClientHospital.tsx  SearchParamsHandler.tsx  page.tsx
my-app/app/medicine/: page.tsx
my-app/app/medicine2/: page.tsx
my-app/components/: NaverMap.tsx
my-app/src/: types.ts
my-app/src/components/: ChatModal.tsx  ChatWidget.tsx  MapTooltipOverlay.ts  NaverMap.tsx
my-app/src/components/ui/: index.ts  index.tsx
my-app/src/lib/: utils.ts
