[project]
name = "frontend"
version = "0.9.0"
description = "Default template for PDM package"
authors = [
    {name = "jiwon1118", email = "b23386585@gmail.com"},
]
dependencies = ["fastapi>=0.115.12", "uvicorn>=0.34.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
